--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,16 @@
+server:
+  port: 8081
+
 spring:
   application:
     name: trainer-workload-service
+  datasource:
+    url: jdbc:h2:mem:workload-db
+    driverClassName: org.h2.Driver
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
