--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-			<!-- Eclipse code formatter     -->
+			<!-- Palantir code formatter     -->
 			<plugin>
 				<groupId>com.diffplug.spotless</groupId>
 				<artifactId>spotless-maven-plugin</artifactId>
@@ -152,12 +152,17 @@
 
 				<configuration>
 					<java>
+						<palantirJavaFormat>
+							<version>2.50.0</version>
+						</palantirJavaFormat>
+
 						<importOrder>
 							<file>build/eclipse-formatter-config.importorder</file>
 						</importOrder>
-						<eclipse>
-							<file>build/eclipse-formatter-config.xml</file>
-						</eclipse>
+
+						<removeUnusedImports/>
+						<trimTrailingWhitespace/>
+						<endWithNewline/>
 					</java>
 				</configuration>
 
